--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,19 @@ repositories {
 }
 
 dependencies {
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0"
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+	// https://mvnrepository.com/artifact/org.apache.poi/poi
+	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
+
 }
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
